--- a/Statistical_Analysis.ipynb
+++ b/Statistical_Analysis.ipynb
@@ -13,8 +13,9 @@
       "name": "python"
     },
     "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "d9f034ecf5b94445a4b98168a4802c9b": {
+  "state": {
+    "application/vnd.jupyter.widget-state+json": {
+      "d9f034ecf5b94445a4b98168a4802c9b": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
